图片上传组件封装、异步错误捕获处理、代码优化精简处理

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 package-lock.json
 tests/**/coverage/
+test.html
+test1.html
+test2.html
+mock/
 
 # Editor directories and files
 .idea
