修改了一些配置

--- a/.env.development
+++ b/.env.development
@@ -5,8 +5,8 @@ ENV = 'development'
 VUE_APP_BASE_API = '/dev-api'
 
 # real api
-# VUE_APP_REAL_API = 'http://106.54.168.208:1016'
-VUE_APP_REAL_API = 'http://localhost:1016'
+VUE_APP_REAL_API = 'http://106.54.168.208:1016'
+# VUE_APP_REAL_API = 'http://localhost:1016'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
